--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -26,7 +26,7 @@
 }
 
 .bg-accent {
-    background-color: #FF95B1;
+    background-color: #FF95B1 !important;
 }
 
 .swiper-button-next, .swiper-button-prev {
@@ -102,4 +102,9 @@
 
 .nav .nav-link-name::before {
     top: 100%;
+}
+
+.display-4 {
+    text-transform: uppercase;
+    font-size: 4.6875em;
 }
